Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28737

UBSan: integer overflow in config_parser

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.0
    • 5.5.0
    • memcached
    • Untriaged
    • Unknown

    Description

      UBSan flags a number of cases where we overflow an integer type - for example:

      kv_engine/utilities/config_parser.cc:131:24: runtime error: signed integer overflow: 1073741824 * 1024 cannot be represented in type 'int'
                  #0 0x1029596c0 in parse_config(char const*, config_item*, __sFILE*) config_parser.cc:131
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty