MB-28737: UBSan: Fix integer overflows

UBSan flags a number of cases where we overflow an integer type - for
example:

    signed integer overflow: 1073741824 * 1024 cannot be represented in type 'int'
    #0 0x1029596c0 in parse_config(char const*, config_item*, __sFILE*) config_parser.cc:131

Change-Id: Ifc762bb25b598ce1db2bdee58b1636ff87436bd1
Reviewed-on: http://review.couchbase.org/91017
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>